# nnfs-book-code

./: .pre-commit-config.yaml  .pylintrc  Makefile  README.md  environment.yml  pyproject.toml
code/: main.py
code/chapters/: p003-Dot-Product.py  p004-Layers-and-Object.py  p005-ReLU-Activation.py  p006-Softmax-Activation.py  p007-Categorical-Cross-Entropy-Loss.py
