[tool.poetry]
name = "nnfs-env"
version = "1.0.0"
description = ""
authors = []
repository = "https://github.com/gbourniq/nnfs"
keywords = []

[tool.poetry.dependencies]
python = "^3.8.0"                                   # PSF
nnfs = "^0.5.1"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"                                  # MIT
black = "19.10b0"                                   # MIT
isort = "4.3.4"                                     # MIT
pylint = "^2.6.0"                                   # GPL
pre-commit = "^2.8.2"                               # MIT

[build-system]
requires = ["wheel", "tomlkit", "poetry>=1.1.3"] # PEP 518
build-backend = "poetry.masonry.api"